# hh_aitable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
core/: client.py  parser.py
crawler/: scanner.py
models/: vacancy.py
tests/: test_ai_analyzer.py  test_client.py  test_config.py  test_exporter.py  test_vacancy.py
utils/: ai_analyzer.py  config.py  exporter.py  logger.py  progress_helper.py
